fix border collapse issue

--- a/client/src/styles/popup.scss
+++ b/client/src/styles/popup.scss
@@ -5,13 +5,18 @@ $dark-color: #272c34;
 $black-color: #121212;
 
 .bookmarkRowContainer {
+  border: 2px solid transparent;
   &:hover,
   &[data-is-selected="true"] {
     background-color: $grey-color;
+    border-radius: 20px;
   }
   &[data-is-selected="true"] {
-    border: 2px solid #3f51b5;
-    border-radius: 4px;
+    border-color: #3f51b5;
+  }
+  // Select all selected adjacent siblings to collapse adjacent borders
+  &[data-is-selected="true"] + &[data-is-selected="true"] {
+    border-top-color: transparent;
   }
   > .react-ripples {
     width: 100%;
